--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <tr>
         <td><img src="images/kev2_circle.png" alt="kevin profile picture" width="250px" height="250px"></td>
         <td><h1>Kevin Solanki</h1>
-        <p><em>An Ambivert, also known as <strong>Moody</strong>.</em></p>
+        <p><strong>Native Android Developer</strong></p>
         <p>Currently I am diving into Web Development.</p>
         <p>I am going to participate in 50 days of practice! This will
         hold me accountable to be consistent and to share my progress.</p></td>
@@ -53,10 +53,6 @@
       <tr>
         <td>Teaching</td>
         <td>⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Humming and Hawing</td>
-        <td>⭐⭐⭐⭐⭐</td>
       </tr>
     </table>
     <hr size="3" noshade>
